tests/unit/evaluation/minizinc/general/test_var_prod.mzn_fd.err
test_var_prod.fzn:7:
  symbol error: `product' undeclared
